# Letsee

./: .dockerignore  .env.prod  .env.prod.example  .gitignore  .gitlab-ci.yml  BRANCHES.md  Dockerfile.frontend  Dockerfile.wal-g  LICENSE  PROJECT_STATUS.md  README.md  SETUP.md  api.js  config-script.js  config-style.css  config.html  db.js  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  index.html  login.html  loki-config.yaml  migrate-data.html  minio-backup-policy.json  nginx-proxy.conf  nginx.conf  pg-upload-s3.py  promtail-config.yaml  script.js  setup-pocketbase.html  start-letsee.bat  style.css  traefik-config.yml  traefik-security.yml  wal-g-backup.sh  wal-g-env.sh  wal-g-postgresql.conf  wal-g-restore.sh  (+1 more)
backend/: .dockerignore  .env.example  .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-dev-entrypoint.sh  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/core/: backup.py  config.py  database.py  logging_config.py  rate_limit.py  realtime.py  request_logging.py  scheduler.py  security.py
backend/app/routers/: auth.py  backups.py  events.py  files.py  handovers.py  people.py  schedules.py  settings.py  users.py
backend/app/scripts/: run_backup.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 41316fcf6b5b_add_revoked_tokens_table.py  4c590b23b1bb_create_all_tables_from_models.py  556dbdeb7e81_merge_users_and_people.py  7d9a2c6f4b1e_migrate_schedule_names_to_user_ids.py  a1b2c3d4e5f6_add_schedule_audit_fields.py  b2c3d4e5f6g7_convert_schedule_to_multi_shift.py  c4d5e6f7a8b9_add_user_admin_and_person_link.py  d4e5f6a7b8c9_add_positions_table_and_user_fk.py  f20fcaaa40d8_create_tables.py  f2e1d0c9b8a7_add_theme_to_users.py  f3999ec856d3_add_deleted_at_column_to_handovers_for_.py
backend/tests/: conftest.py  test_auth_rbac.py  test_schedule_uuid_storage.py
certs/: cert.pem  key.pem
frontend/: .editorconfig  README.md  eslint.config.js  eslint.config.mjs  index.html  login.html  package-lock.json  package.json  schedule.html
frontend/css/: style.css
frontend/css/modules/: base.css  handover.css  modal.css  people.css  schedule.css  shell.css
frontend/js/: api.js  error-handler.js  events.js  login.js  people.js  schedule.js  script.js  staff.js  store.js  utils.js
grafana-provisioning/dashboards/: dashboards.yaml  letsee-logs.json
scripts/: create_admin.py
