[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letsee-backend"
version = "0.1.0"
description = "Letsee - Hotel Front Office Shift Handover Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "gunicorn==21.2.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg[binary]==3.3.1",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "boto3==1.34.5",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "flake8==6.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
