[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letsee-backend"
version = "0.1.0"
description = "Letsee - Hotel Front Office Shift Handover Backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework - updated for security
    "fastapi>=0.109.1",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",

    # Database
    "sqlalchemy[mypy]>=2.0.25",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.3.1",

    # Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Auth & Security - updated for CVE fixes
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "cryptography>=46.0.5",
    "pyasn1>=0.6.3",  # Transitive dep fix

    # File handling - updated for security
    "python-multipart>=0.0.22",
    "boto3>=1.34.5",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",

    # Explicit transitive dep fixes (for pip-audit)
    "jinja2>=3.1.6",
    "werkzeug>=3.1.6",
    "pillow>=12.1.1",
    "protobuf>=5.29.6",
    "fonttools>=4.60.2",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "ruff>=0.15.7",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # SQLAlchemy compatibility
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI uses this)
    "B904",  # Raise without from (SQLAlchemy compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
